# wallet-phrase-manager

./: README.md  data.json  main.py  pyproject.toml
core/: core.py
data/: data.json  test.py
lib/: colors.py  jsonManage.py  oldjsonManage.py
